non fixed component div doesn't overlap anymore with the fixed one

--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,7 @@ html, body {
 }
 
 #non-fixed {
-  position: relative;
-  top: 50px;
-  height: calc(100% - 50px);
+  margin-top: 130px
 }
 
 #main {
